--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
     driver-class-name: org.h2.Driver
     username: admin
     password: 1234
-    mapper-location: classpath:mapper/*.xml
+
   h2:
     console:
       enabled: true
@@ -27,4 +27,9 @@ spring:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
-  type-aliases-package: boot.demo.aop.model.TbUserMst
+  type-aliases-package: boot.demo.aop.model
+  mapper-locations: classpath:mapper/*.xml
+
+logging:
+  level:
+    sql: trace
