--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,7 +33,7 @@ spring:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
-  type-aliases-package: boot.demo.aop.model.dto boot.demo.aop.model.entity
+  type-aliases-package: boot.demo.aop.common.model.dto boot.demo.aop.common.model.entity
   mapper-locations: classpath:mapper/*.xml
 
 logging:
